# frozen

./: .gitignore  Cargo.toml  rustfmt.toml
src/: b2api.rs  box_result.rs  config.rs  crypto.rs  dirdb.rs  futures_compat.rs  main.rs  progress.rs  prompt.rs  signal.rs  test_helpers.rs  util.rs  vt100.rs
src/action/: delete.rs  download.rs  mod.rs  scoped_runtime.rs  upload.rs
src/cmd/: backup.rs  delete.rs  list.rs  mod.rs  rename.rs  restore.rs  save_key.rs  sync.rs  unlock.rs
src/data/: file.rs  mod.rs  paths.rs  root.rs
src/dirdb/: bitstream.rs  diff.rs  dirstat.rs  filestat.rs  pack.rs
src/dirdb/bitstream/: reader.rs  writer.rs
src/dirdb/diff/: dirs.rs  files.rs
src/net/: b2.rs  b2api.rs  delete.rs  download.rs  mod.rs  progress_thread.rs  rate_limiter.rs  upload.rs
src/net/rate_limiter/: data_permit.rs
src/progress/: mod.rs  progress.rs  progress_handler.rs  progress_reader.rs
src/stream/: compression_stream.rs  decompression_stream.rs  decryption_stream.rs  encryption_stream.rs  hashed_stream.rs  mod.rs  simple_bytes_stream.rs
src/termio/: mod.rs  progress.rs  vt100.rs
test_data/Folder A/: a1.txt
test_data/Folder A/aa/: aa1.txt  aa2.txt
test_data/Folder A/ac/: ac1.txt
test_data/Folder A/ac/aca/acaa/: acaa1.txt
test_data/Folder B/: .b2
